syntax = "proto3";

package basic.piyo.v1;
option go_package = "github.com/kzmake/examples/basic-service-invocation/api/piyo/v1;piyo";

import "google/api/annotations.proto";

service Piyo {
  rpc Ping(PingRequest) returns (PingResponse) {
    option (google.api.http) = {
      get: "/piyo/ping"
    };
  }
}

message PingRequest {}

message PingResponse {
  string msg = 1;
}
